third_party/move/move-compiler-v2/transactional-tests/tests/control_flow/round-trip/unused_signer_infinite_loop.decompiled
//**** Cross-compiled for `move` syntax from `tests/control_flow/unused_signer_infinite_loop.move`

//# run --gas-budget 700 --signers 0x1
script {
    fun main(p0: signer) {
        loop continue
    }
}
